# osmo-sgsn

./: .gitignore  .gitreview  Makefile.am  README  README.md  TODO-RELEASE  configure.ac  osmo-sgsn.pc.in  osmoappdesc.py
contrib/: jenkins.sh  osmo-sgsn.spec  osmo-sgsn.spec.in
contrib/systemd/: Makefile.am  osmo-gtphub.service  osmo-sgsn.service
debian/: changelog  control  copyright  osmo-gbproxy.install  osmo-gbproxy.service  osmo-gtphub.install  osmo-gtphub.service  osmo-sgsn-doc.install  osmo-sgsn.install  osmo-sgsn.service  postinst  rules
doc/examples/: Makefile.am
doc/examples/osmo-gbproxy/: osmo-gbproxy-legacy.cfg  osmo-gbproxy-pool.cfg  osmo-gbproxy.cfg
doc/examples/osmo-gtphub/: gtphub-example.txt  osmo-gtphub-1iface.cfg  osmo-gtphub.cfg
doc/examples/osmo-sgsn/: osmo-sgsn-accept-all.cfg  osmo-sgsn.cfg  osmo-sgsn_custom-sccp.cfg
doc/manuals/: Makefile  Makefile.am  osmogbproxy-usermanual-docinfo.xml  osmogbproxy-usermanual.adoc  osmogbproxy-vty-reference.xml  osmosgsn-usermanual-docinfo.xml  osmosgsn-usermanual.adoc  osmosgsn-vty-reference.xml  regen_doc.sh
doc/manuals/chapters/: configuration.adoc  control.adoc  counters_generated.adoc  gbproxy-configuration.adoc  gbproxy-control.adoc  gbproxy-details.adoc  gbproxy-overview.adoc  gbproxy-running.adoc  gbproxy-sgsnpool.adoc  gsup.adoc  overview.adoc  running.adoc
doc/manuals/vty/: sgsn_vty_additions.xml  sgsn_vty_reference.xml
doc/manuals/vty-osmogbproxy/: gbproxy_vty_additions.xml  gbproxy_vty_reference.xml
include/openbsc/: Makefile.am  gprs_sgsn.h  signal.h  vty.h
include/osmocom/: Makefile.am
include/osmocom/gtphub/: Makefile.am  gtphub.h
include/osmocom/sgsn/: Makefile.am  apn.h  auth.h  crc24.h  debug.h  gb_proxy.h  gprs_bssgp.h  gprs_gb.h  gprs_gb_parse.h  gprs_gmm.h  gprs_gmm_attach.h  gprs_gmm_fsm.h  gprs_gmm_rau.h  gprs_gmm_util.h  gprs_llc.h  gprs_mm_state_gb_fsm.h  gprs_mm_state_iu_fsm.h  gprs_ns.h  gprs_ranap.h  gprs_rau_fsm.h  gprs_routing_area.h  gprs_sgsn.h  gprs_sm.h  gprs_sndcp.h  gprs_sndcp_comp.h  gprs_sndcp_dcomp.h  gprs_sndcp_pcomp.h  gprs_sndcp_xid.h  gprs_subscriber.h  gprs_utils.h  gsup_client.h  gtp.h  gtp_ggsn.h  gtp_mme.h  gtphub.h  iu_client.h  iu_rnc.h  iu_rnc_fsm.h  mmctx.h  pdpctx.h  (+8 more)
include/osmocom/vlr/: Makefile.am  debug.h  vlr.h
src/: Makefile.am
src/gbproxy/: Makefile.am  gb_proxy.c  gb_proxy_ctrl.c  gb_proxy_main.c  gb_proxy_patch.c  gb_proxy_peer.c  gb_proxy_tlli.c  gb_proxy_vty.c
src/gprs/: Makefile.am  crc24.c  gb_proxy.c  gb_proxy_ctrl.c  gb_proxy_main.c  gb_proxy_patch.c  gb_proxy_peer.c  gb_proxy_tlli.c  gb_proxy_vty.c  gprs_gb.c  gprs_gb_parse.c  gprs_gmm.c  gprs_gmm_attach.c  gprs_llc.c  gprs_llc_parse.c  gprs_llc_vty.c  gprs_llc_xid.c  gprs_mm_state_gb_fsm.c  gprs_mm_state_iu_fsm.c  gprs_ranap.c  gprs_sgsn.c  gprs_sndcp.c  gprs_sndcp_comp.c  gprs_sndcp_dcomp.c  gprs_sndcp_pcomp.c  gprs_sndcp_vty.c  gprs_sndcp_xid.c  gprs_subscriber.c  gprs_utils.c  gsup_client.c  gtphub.c  gtphub_ares.c  gtphub_main.c  gtphub_sock.c  gtphub_vty.c  sgsn_ares.c  sgsn_auth.c  sgsn_cdr.c  sgsn_ctrl.c  sgsn_libgtp.c  (+3 more)
src/gtphub/: Makefile.am  gtphub.c  gtphub_ares.c  gtphub_main.c  gtphub_sock.c  gtphub_vty.c
src/libcommon/: Makefile.am  common_vty.c  debug.c  gsm_data.c  gsm_data_shared.c  gsm_subscriber_base.c  gsup_client.c  gsup_test_client.c  oap_client.c  socket.c
src/libvlr/: Makefile.am  TODO.md  vlr.c  vlr_auth_fsm.c  vlr_lu_fsm.c
src/sgsn/: Makefile.am  apn.c  gprs_bssgp.c  gprs_gb.c  gprs_gmm.c  gprs_gmm_attach.c  gprs_gmm_fsm.c  gprs_gmm_rau.c  gprs_gmm_util.c  gprs_llc.c  gprs_llc_vty.c  gprs_mm_state_gb_fsm.c  gprs_mm_state_iu_fsm.c  gprs_ns.c  gprs_ranap.c  gprs_rau_fsm.c  gprs_routing_area.c  gprs_sgsn.c  gprs_sm.c  gprs_sndcp.c  gprs_sndcp_dcomp.c  gprs_sndcp_vty.c  gprs_sndcp_xid.c  gprs_subscriber.c  gtp_ggsn.c  gtp_mme.c  iu_client.c  iu_rnc.c  iu_rnc_fsm.c  mmctx.c  pdpctx.c  sccp.c  sgsn.c  sgsn_auth.c  sgsn_cdr.c  sgsn_ctrl.c  sgsn_libgtp.c  sgsn_main.c  sgsn_rim.c  sgsn_vty.c  (+2 more)
tests/: Makefile.am  atlocal.in  ctrl_test_runner.py  osmo-gbproxy_test-nodes.vty  osmo-sgsn-accept-all.cfg  osmo-sgsn.cfg  osmo-sgsn_test-nodes.vty  test_nodes.vty  testsuite.at  vty_test_runner.py
tests/gbproxy/: Makefile.am  gbproxy_test.c  gbproxy_test.ok
tests/gprs/: Makefile.am  gprs_test.c  gprs_test.ok
tests/gprs_routing_area/: Makefile.am  gprs_routing_area_test.c  gprs_routing_area_test.ok
tests/gtphub/: Makefile.am  gtphub_test.c
tests/oap/: Makefile.am  oap_client_test.c
tests/sgsn/: Makefile.am  crc24.c  gprs_gb_parse.c  gprs_gb_parse.h  gprs_llc_parse.c  gprs_llc_parse.h  sgsn_test.c  sgsn_test.ok
tests/slhc/: Makefile.am  slhc_test.c
tests/sndcp_xid/: Makefile.am  sndcp_xid_test.c
tests/v42bis/: Makefile.am  v42bis_test.c
tests/xid/: Makefile.am  xid_test.c
