noinst_HEADERS = \
	debug.h \
	gb_proxy.h \
	gprs_gb_parse.h \
	gprs_gmm.h \
	gprs_llc.h \
	gprs_llc_xid.h \
	gprs_sgsn.h \
	gprs_sndcp.h \
	gprs_sndcp_comp.h \
	gprs_sndcp_dcomp.h \
	gprs_sndcp_pcomp.h \
	gprs_sndcp_xid.h \
	gprs_subscriber.h \
	gprs_utils.h \
	gsup_client.h \
	gtphub.h \
	oap_client.h \
	sgsn.h \
	$(NULL)
