noinst_HEADERS = \
	apn.h \
	auth.h \
	common.h \
	debug.h \
	gprs_bssgp.h \
	gprs_gmm.h \
	gprs_gmm_fsm.h \
	gprs_gmm_attach.h \
	gprs_mm_state_gb_fsm.h \
	gprs_mm_state_iu_fsm.h \
	gprs_ns.h \
	gprs_llc.h \
	gprs_ranap.h \
	gprs_sm.h \
	gprs_sndcp.h \
	gprs_subscriber.h \
	gprs_utils.h \
	gtp.h \
	gtp_ggsn.h \
	gtp_mme.h \
	mmctx.h \
	pdpctx.h \
	sgsn.h \
	sgsn_rim.h \
	signal.h \
	slhc.h \
	v42bis.h \
	v42bis_private.h \
	vty.h \
	$(NULL)
