noinst_HEADERS = \
	apn.h \
	auth.h \
	common.h \
	crc24.h \
	debug.h \
	gprs_bssgp.h \
	gprs_gmm.h \
	gprs_gmm_fsm.h \
	gprs_gmm_attach.h \
	gprs_gmm_util.h \
	gprs_mm_state_gb_fsm.h \
	gprs_mm_state_iu_fsm.h \
	gprs_ns.h \
	gprs_llc.h \
	gprs_llc_xid.h \
	gprs_ranap.h \
	gprs_routing_area.h \
	gprs_sm.h \
	gprs_sndcp_comp.h \
	gprs_sndcp_dcomp.h \
	gprs_sndcp.h \
	gprs_sndcp_pcomp.h \
	gprs_sndcp_xid.h \
	gprs_subscriber.h \
	gprs_utils.h \
	gtp.h \
	gtp_ggsn.h \
	gtp_mme.h \
	iu_client.h \
	iu_rnc.h \
	mmctx.h \
	pdpctx.h \
	sccp.h \
	sgsn.h \
	sgsn_rim.h \
	signal.h \
	slhc.h \
	v42bis.h \
	v42bis_private.h \
	vty.h \
	$(NULL)
